# DevFtGather

./: CMakeLists.txt  DevFtGather.cpp  DevFtGather.h  README.md  VersionInfo.rc.in  arithmetic.c  arithmetic.h
demo/: CMakeLists.txt  main.cpp
